--- a/views/plugin_social_auth/user.html
+++ b/views/plugin_social_auth/user.html
@@ -2,7 +2,7 @@
 <h1>Notes</h1>
 
 <p>
-This is a test plug-in for python social auth integration with web2py,  Facebook, Twitter, Microsoft Live  and Mozilla Persona (which allows google and some other logins appears to be working. Most others untested.
+This is a test plug-in for python social auth integration with web2py,  Facebook, Twitter, Microsoft Live have been tested. Most others untested.
 </p>
 
 <div id="social_auth_form">
