include clearout and cookie consent

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -4,23 +4,15 @@
 {{if 'message' in globals():}}
 <h3>{{=message}}</h3>
 
-<h4>{{=T('How did you get here?')}}</h4>
-<ol>
-  <li>{{=T('You are successfully running web2py')}}</li>
-  <li>{{=XML(T('You visited the url %s', A(request.env.path_info,_href=request.env.path_info)))}}</li>
-  <li>{{=XML(T('Which called the function %s located in the file %s',
-             (A(request.function+'()',_href='#'),
-              A('web2py/applications/%(application)s/controllers/%(controller)s.py'%request,
-               _href=URL('admin','default','peek', args=(request.application,'controllers',request.controller+'.py'))))))}}</li>
-  <li>{{=XML(T('The output of the file is a dictionary that was rendered by the view %s',
-           A('web2py/applications/%(application)s/views/%(controller)s/index.html'%request,
-           _href=URL('admin','default','peek',args=(request.application,'views',request.controller,'index.html')))))}}</li>
-  <li>{{=T('You can modify this application and adapt it to your needs')}}</li>
-</ol>
 
+<h1>Web2py Python Social Auth Plug-in</h1>
 <p>This is a plug-in for testing python social auth integration with web2py.
 The code for this version is hosted at https://github.com/DonaldMcC/w2p-social-auth which was forked from https://github.com/bnmnetp/w2p-social-auth which worked with version 0.1.26 and lower
-of python social auth.</p>
+of python social auth.  A sample of providers are configured and if you do want to test then you do need to login using one of these.
+
+These log-ins are now being deleted on a weekly basis and are not being analysed or used in any manner.  If this is not
+    acceptable then do not log into the site.
+</p>
 {{elif 'content' in globals():}}
 {{=content}}
 {{else:}}
